<resources>
    <string name="app_name">Citizen Service</string>
    <string name="register_email">Input Email</string>
    <string name="register_password">Input Password</string>
    <string name="register_repeat_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="sign_in_email">Input Email</string>
    <string name="sign_in_password">Input Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="link_to_register_text">Not registered? Sign-up</string>
    <string name="title_activity_internal">InternalActivity</string>
    <string name="fragment_issues_title">Most Voted</string>
    <string name="server_url">http://10.0.3.2:8594/</string>
    <string name="nav_bar_close">close</string>
    <string name="nav_bar_open">open</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="submit_title_hint">Input Title</string>
    <string name="submit_description_hint">Input Description</string>
    <string name="submit_city_tap_hint">Double tap to auto detect city</string>
    <string name="select_picture_button">Select Picture</string>
    <string name="submit_button">Submit</string>
    <string name="switch_text">Anonymous</string>
    <string name="search_title_hint">Filter issues by title</string>
    <string name="search_city_hint">Filter issues by city</string>
    <string name="search_button">Search</string>
    <string name="my_issues_image_content">Image</string>
    <string name="my_issues_author_text">Sample text author</string>
    <string name="my_issues_title_text">Sample text title</string>
    <array name="drawer_items">
        <item>Issues</item>
        <item>Search</item>
        <item>Submit</item>
        <item>My Issues</item>
        <item>Take Photo</item>
    </array>
</resources>
