<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DefaultDimensions">

    <EditText
        android:id="@+id/registerEmail"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/register_email"
        style="@style/DefaultWrapDimensions"/>

    <EditText
        android:id="@+id/registerPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/registerEmail"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/register_password"
        style="@style/DefaultWrapDimensions"/>

    <EditText
        android:id="@+id/registerRepeatPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/register_repeat_password"
        style="@style/DefaultWrapDimensions"/>

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button"
        android:layout_below="@+id/registerRepeatPassword"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/DefaultButtonStyle"/>

</RelativeLayout>