<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DefaultDimensions">

    <EditText
        android:id="@+id/searchTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/search_title_hint"
        style="@style/DefaultWrapDimensions"/>

    <AutoCompleteTextView
        android:id="@+id/searchCity"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/searchTitle"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/search_city_hint"
        style="@style/DefaultWrapDimensions"/>

    <Button
        android:id="@+id/searchButton"
        android:text="@string/search_button"
        android:layout_below="@+id/searchCity"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_default_style"
        style="@style/DefaultButtonStyle"/>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:gravity="center"
        android:layout_below="@+id/searchButton"
        android:visibility="invisible"
        style="@style/DefaultDimensions">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>