<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/basicDetailsImageContainer"
        android:contentDescription="@string/my_issues_image_content"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@android:color/holo_red_dark"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/basicDetailsTitle"
        android:text="@string/my_issues_title_text"
        android:layout_toRightOf="@+id/basicDetailsImageContainer"
        android:textSize="16sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/DefaultWrapDimensions"/>

    <TextView
        android:id="@+id/basicDetailsAuthor"
        android:text="@string/my_issues_author_text"
        android:layout_toRightOf="@+id/basicDetailsImageContainer"
        android:layout_below="@+id/basicDetailsTitle"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/DefaultWrapDimensions"/>

    <TextView
        android:id="@+id/detailsVotesCount"
        android:text="Votes count"
        android:layout_toRightOf="@+id/basicDetailsImageContainer"
        android:layout_below="@+id/basicDetailsAuthor"
        android:textSize="16sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/DefaultWrapDimensions"/>

    <TextView
        android:id="@+id/basicDetailsDescription"
        android:text="Sample description"
        android:layout_below="@+id/basicDetailsImageContainer"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/DefaultWrapDimensions"/>
</RelativeLayout>